...
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/shortDescribe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Starting prep"
                android:padding="@dimen/activity_vertical_margin"
                android:background="@color/headerColor"
                android:textColor="@color/white_text"
                android:textSize="@dimen/text_sub_header"/>
            <TextView
                android:id="@+id/description"
...
